added use of generalPipeline file within src of shared library

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -3,5 +3,8 @@
 @Library("jenkinsfiles") _
 
 
-checkoutSCM.checkout()
+//checkoutSCM.checkout()
+
+def pipeline = new pipelineGeneral()
+pipeline.checkout()
 
