updated path to PipelineGeneral

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -5,6 +5,7 @@
 
 //checkoutSCM.checkout()
 
-def pipeline = new pipelineGeneral()
+//def pipeline = new pipelineGeneral()
+def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
