--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -7,7 +7,7 @@
 
 //def pipeline = new pipelineGeneral()
 
-def pipeline = new main.PipelineGeneral()
+def pipeline = new PipelineGeneral()
 //def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
