--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -5,9 +5,9 @@
 
 //checkoutSCM.checkout()
 
-//def pipeline = new pipelineGeneral()
+//def pipeline = new PipelineGeneral()
+def pipeline = new main.PipelineGeneral()
 
-def pipeline = new PipelineGeneral()
 //def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
