removed main from path to PipelineConfig

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -8,7 +8,7 @@
 //def pipeline = new PipelineGeneral()
 //def pipeline = new main.PipelineGeneral()
 
-def pipeline = new main.org.cranek.v1.PipelineGeneral()
+def pipeline = new org.cranek.v1.PipelineGeneral()
 
 //def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
