changed to using main.PipelineConfig

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -6,9 +6,9 @@
 //checkoutSCM.checkout()
 
 //def pipeline = new PipelineGeneral()
-//def pipeline = new main.PipelineGeneral()
+def pipeline = new main.PipelineGeneral()
 
-def pipeline = new org.cranek.v1.PipelineGeneral()
+//def pipeline = new org.cranek.v1.PipelineGeneral()
 
 //def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
