removed groovy from path to PipelineConfig

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -10,6 +10,6 @@
 
 //def pipeline = new org.cranek.v1.PipelineGeneral()
 
-def pipeline = new main.groovy.org.cranek.v1.PipelineGeneral()
+def pipeline = new main.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
