--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -10,8 +10,7 @@
 
 //def pipeline = new org.cranek.v1.PipelineGeneral()
 
-sh('ls -a')
 
-def pipeline = new src.main.org.cranek.v1.PipelineGeneral()
+def pipeline = new main.org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
