--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -11,6 +11,6 @@
 //def pipeline = new org.cranek.v1.PipelineGeneral()
 
 
-def pipeline = new main.org.cranek.v1.PipelineGeneral()
+def pipeline = new org.cranek.v1.PipelineGeneral()
 pipeline.checkout()
 
