added another sanity check and turned on call to checkout

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -7,5 +7,7 @@
 def pipeline = new main.groovy.pipelineGeneral()
 
 println("sanity check 2")
-//pipeline.checkout("ip-service1")
+pipeline.checkout("ip-service1")
+
+println("sanity check 3")
 
