--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -6,6 +6,8 @@
 
 def pipeline = new main.groovy.pipelineGeneral()
 
+println(pipeline)
+
 println("sanity check 2")
 pipeline.checkout("ip-service1")
 
