removed unnecessary code and using string inside of call to checkout method

--- a/jenkinsfiles/Jenkinsfile
+++ b/jenkinsfiles/Jenkinsfile
@@ -3,10 +3,6 @@
 @Library("jenkinsfiles") _
 
 
-
 def pipeline = new main.groovy.pipelineGeneral()
-def serviceName = "ip-service1"
-pipeline.checkout(serviceName)
-
-println("sanity check 3")
+pipeline.checkout("ip-service1")
 
